argocd/apps/infra/monitoring/vmlogs/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: monitoring-app
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: VictoriaLogs
    gethomepage.dev/icon: victoriametrics
    gethomepage.dev/description: ""
    gethomepage.dev/pod-selector: app.kubernetes.io/name=victoria-logs-single
  name: vmlogs-httproute
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-system
      sectionName: https
  hostnames:
    - logs.yanello.net
  rules:
    - backendRefs:
        - name: victoria-logs-single-server
          namespace: monitoring
          port: 9428
